--- a/Frontend/my-registration-app/src/components/Style/RegistrationForm.css
+++ b/Frontend/my-registration-app/src/components/Style/RegistrationForm.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  padding: 20px;
+  padding: 5%;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
