--- a/Frontend/my-registration-app/src/components/Style/Navbar.css
+++ b/Frontend/my-registration-app/src/components/Style/Navbar.css
@@ -1,21 +1,23 @@
 .navbar {
     display: flex;
-    justify-content: flex-end; /* Выравниваем кнопки по правому краю */
+    justify-content: space-between; /* Выравниваем кнопки по правому краю */
     align-items: center;
     padding: 10px 20px;
-    background-color: #f4f4f4;
+    background-color: #2b3034;
   }
   
   .navbar a,
   .navbar button {
     display: inline-block;
-    padding: 5px 10px;
+    padding: 10px;
     margin-left: 10px; /* Отступ между кнопками */
-    font-size: 14px;
+    font-size: 16px;
+    text-decoration: none;
     text-align: center;
-    background-color: #4caf50;
+    background-color: #e6b333;
+    border: 2px solid #22272d;
     color: #fff;
-    border: none;
+    /* border: none; */
     border-radius: 5px;
     cursor: pointer;
     width: auto; /* Ширина кнопок будет зависеть от контента */
@@ -25,12 +27,12 @@
   
   .navbar a:hover,
   .navbar button:hover {
-    background-color: #45a049;
+    background-color: #d3a524;
   }
   
   .navbar a:active,
   .navbar button:active {
-    background-color: #388e3c;
+    background-color: #b08819;
   }
   
   /* Стили для разделителя между кнопками */
@@ -46,6 +48,6 @@
     left: -5px;
     top: 50%;
     transform: translateY(-50%);
-    color: #333;
+    color: #2f2c2c;
   }
   
