--- a/Frontend/my-registration-app/src/components/Style/SignInRegister.css
+++ b/Frontend/my-registration-app/src/components/Style/SignInRegister.css
@@ -4,26 +4,15 @@
   box-sizing: border-box;
 }
 
-html, body {
-  background: #1a1f25;
-  font-family: 'Roboto', sans-serif;
-}
-
 .clear {
   clear: both;
 }
 
-#man-people-user, #lock-locker {
-  fill: white;
-}
-
 /* Общий контейнер */
 .wrapper {
-  width: 300px;
-  margin: 12% auto;
+  margin: 8% auto;
 }
-
-.registration-container {
+.registration-container, .login-container {
   width: 600px;
   margin: 50px auto;
   background-color: #2c2f34;
@@ -32,18 +21,11 @@ html, body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.registration-container h2, .login-container h2{
+  color: #eee;
+}
+
 /* Форма */
-form {
-  position: relative;
-}
-
-
-.form-container {
-  display: flex;
-  flex-direction: column;
-  gap: 10px; 
-}
-
 .input-wrapper {
   position: relative;
   margin-bottom: 15px;
@@ -51,23 +33,25 @@ form {
 
 input {
   width: 100%;
-  padding: 5px;
   height: 40px;
-  border-radius: 3px;
-  margin: 5px 0;
-  outline: none;
+  border-radius: 5px;
+}
+
+.input-wrapper input {
+  padding-left: 40px; /* Добавляем отступ для текста, чтобы не перекрывал иконку */
+  padding-right: 10px;
 }
 
 input[type="text"], input[type="password"], input[type="email"] {
   background: transparent;
   border: 2px solid #22272d;
-  padding-left: 45px;
+  padding: 25px 55px;
   color: #e6b333;
 }
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus {
-  border: 2px solid white;
-  background: #2c2f34;
+  border: 2px solid #6c6e72;
+  background: #2e3033;
   color: #ffffff;
 }
 
@@ -76,7 +60,7 @@ input[type="submit"] {
   border: none;
   color: white;
   text-align: center;
-  font-size: 0.8em;
+  font-size: 0.9em;
   cursor: pointer;
 }
 
@@ -84,8 +68,20 @@ input[type="submit"]:hover {
   background: #d3a524;
 }
 
-/* Иконки */
-.user, .lock, .email {
+/* Иконки */  
+.icon-container {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+}
+
+.icon {
+  width: 20px;
+  height: 20px;
+}
+
+/* .user, .lock, .email {
   position: absolute;
   width: 30px;
   height: 30px;
@@ -102,10 +98,10 @@ input[type="submit"]:hover {
   background: #22272d;
   top: 0px;
   left: 100%;
-}
+} */
 
-/* Кнопки */
-.button {
+/* Кнопки не надо?*/
+/* .button {
   float: right;
   color: #7f8084;
   border: 1px solid #22272d;
@@ -114,52 +110,26 @@ input[type="submit"]:hover {
   font-size: 0.8em;
   cursor: pointer;
 }
-
 .button:hover {
   color: #d3d3d3;
-}
+} */
 
-.radio-check {
+/* .radio-check {
   width: 100%;
   height: auto;
   border: 1px solid #22272d;
   border-radius: 30px;
-  margin-top: 20px; /* Увеличим отступ сверху */
+  margin-top: 20px; Увеличим отступ сверху 
   text-align: center;
   padding: 4px 0;
   color: #e6b333;
-  font-size: 0.65em; /* Уменьшаем размер шрифта */
+  font-size: 0.65em; Уменьшаем размер шрифта 
   position: relative;
-}
+} 
 
 .radio-check label {
   cursor: pointer;
-}
-
-.input-wrapper {
-  position: relative;
-  margin-bottom: 15px;
-}
-
-.input-wrapper input {
-  width: 100%;
-  padding-left: 30px; /* Добавляем отступ для текста, чтобы не перекрывал иконку */
-  padding-right: 10px;
-}
-
-.icon-container {
-  position: absolute;
-  top: 50%;
-  left: 10px;
-  transform: translateY(-50%);
-}
-
-.icon {
-  width: 20px;
-  height: 20px;
-  color: #888; /* Цвет иконки */
-}
-
+} 
 
 .radio-check .switch-selection {
   display: block;
@@ -177,21 +147,14 @@ input[type="submit"]:hover {
   margin-left: 25px !important;
 }
 
-
-.registration-message {
-  color: #e6b333;
-  text-align: center;
-  margin-top: 15px;
-}
-
 .check-label {
   font-size: 0.8em;
   color: #7f8084;
   margin-top: 10px;
   float: left;
   padding: 3px 0;
-  margin-left: 10px;
-}
+  margin-left: 10px; 
+}*/
 
 .forgot-label {
   font-size: 0.8em;
@@ -200,4 +163,17 @@ input[type="submit"]:hover {
   float: right;
   padding: 3px 0;
   cursor: pointer;
+}
+  
+/* Стили для сообщения */
+.login-message {
+  margin-top: 10px;
+  font-size: 16px;
+  color: #c6ad22;
+}
+
+.registration-message {
+  color: #e6b333;
+  text-align: center;
+  margin-top: 15px;
 }
