--- a/Frontend/my-registration-app/src/components/Style/ResumeStyle.css
+++ b/Frontend/my-registration-app/src/components/Style/ResumeStyle.css
@@ -1,57 +1,157 @@
-.resume-form {
-    max-width: 600px;
-    margin: 10px auto;
-    padding: 20px;
-    border: 1px solid #4a4a4a;
-    border-radius: 8px;
-    background-color: #646468;
-  }
-  .title{
-    padding: 0;
-    margin: 15px 0 20px;
-    text-align: center;
-  }
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .form-group input, textarea, select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #828282;
-    background-color: #565659;
-    border-radius: 4px;
-    font-size: 16px;
-  }
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
 
-  .form-group input:focus, textarea:focus, select:focus{
-    background-color: #444446;
-  }
-  
-  textarea {
-    resize: vertical;
-  }
-  .btn-box{
-    display: flex;
-    justify-content: center;
-  }
-  .submit-button {
-    background-color: #358a38;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .submit-button:hover {
-    background-color: rgb(58, 124, 61);
-  }
-  
+.profilePanel, .btn-box {
+  display: flex;
+  justify-content: center;
+  padding: 15px 20px 0;
+}
+
+.navbar-profile {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.username {
+  color: #eee;
+}
+
+.wrapper {
+  margin: 10px auto;
+}
+
+.profile-container, .resume-container, .resume-form {
+  width: 600px;
+  margin: 50px auto;
+  background-color: #2c2f34;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+h2, h3, .title {
+  color: #eee;
+  text-align: center;
+  margin: 20px 0px;
+}
+
+.icon-edit {
+  height: 24px;
+}
+
+.infoFields {
+  margin: 0;
+}
+
+.infoFields p, label {
+  color: #989898;
+  margin-top: 30px;
+}
+
+.infoFields input, .form-group input, textarea, select {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #828282;
+  background-color: #444446;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.form-group input:focus, textarea:focus, select:focus {
+  background-color: #565659;
+}
+
+.buttons-container, .btn-box {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+
+.btn-save, .btn-cancel, .submit-button {
+  width: 45%;
+  height: 40px;
+  border-radius: 5px;
+  background: #e6b333;
+  border: none;
+  color: white;
+  text-align: center;
+  font-size: 0.9em;
+  cursor: pointer;
+}
+
+.btn-cancel {
+  background: #7b7667;
+}
+
+.btn-logout {
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  background: none;
+  border: none;
+  color: rgb(237, 46, 46);
+  text-align: center;
+  font-size: 0.9em;
+  cursor: pointer;
+}
+
+.btn-logout:hover {
+  color: rgb(217, 132, 132);
+}
+
+.btn-save:hover, .submit-button:hover {
+  background: #d3a524;
+}
+
+.btn-cancel:hover {
+  background: #a8a291;
+}
+
+.create-resume {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.text {
+  color: #aba0a0;
+}
+
+.btn-add {
+  width: auto;
+  padding: 0 20px;
+  height: 40px;
+  border-radius: 5px;
+  background: #e6b333;
+  border: none;
+  color: white;
+  text-align: center;
+  font-size: 0.9em;
+  cursor: pointer;
+}
+
+.form-group input, 
+textarea, 
+select {
+  color: orange;
+  font-family: 'Roboto', sans-serif; /* Указание подключенного шрифта */
+  font-size: 14px;
+  line-height: 1.5;
+  padding: 10px;
+  border: 1px solid #828282;
+  background-color: #565659;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.form-group input:focus, 
+textarea:focus, 
+select:focus {
+  background-color: #444446;
+  outline: none;
+}
