--- a/Frontend/my-registration-app/src/components/shablon/ResumeTemplate2.css
+++ b/Frontend/my-registration-app/src/components/shablon/ResumeTemplate2.css
@@ -1,25 +1,26 @@
-/* Основной контейнер */
-.resume-container {
+  /* Основной контейнер */
+  .resume-container {
     font-family: Arial, sans-serif;
     margin: 0 auto;
-    padding: 20px;
+    padding: 0;
     max-width: 800px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #fbfaf5;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   }
-  
+
   /* Шапка резюме */
   .resume-header {
     text-align: center;
-    margin-bottom: 20px;
+    margin: 0 20px;
   }
   
   .resume-name {
-    font-size: 24px;
+    font-size: 40px;
     font-weight: bold;
     color: #333;
+    margin-bottom: 10px;
   }
   
   .resume-age-gender {
@@ -29,30 +30,26 @@
   
   /* Содержимое резюме */
   .resume-content {
-    padding: 10px;
+    padding: 5px 20px 10px;
   }
   
-  .resume-section {
+  .resume-section2 {
     margin-bottom: 20px;
   }
   
-  .resume-section h3 {
+  .resume-section2 h3 {
     font-size: 18px;
     color: #333;
-    margin-bottom: 8px;
+    padding: 5px 0;
     text-transform: uppercase;
+    /* Для выделения заголовков */
+    background-color: #fadfc5;
   }
   
-  .resume-section p {
+  .resume-section2 p {
     font-size: 16px;
     color: #555;
     line-height: 1.5;
-  }
-  
-  /* Для выделения заголовков */
-  h3 {
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 5px;
   }
   
   /* Адаптивность */
@@ -65,11 +62,11 @@
       font-size: 20px;
     }
   
-    .resume-section h3 {
+    .resume-section2 h3 {
       font-size: 16px;
     }
   
-    .resume-section p {
+    .resume-section2 p {
       font-size: 14px;
     }
   }
