--- a/Frontend/my-registration-app/src/components/Style/Profile.css
+++ b/Frontend/my-registration-app/src/components/Style/Profile.css
@@ -20,7 +20,7 @@
   margin: 10px auto;
 }
 
-.profile-container, .resume-container{
+.profile-container, .resume-profile-container{
   width: 600px;
   margin: 50px auto;
   background-color: #2c2f34;
@@ -119,10 +119,14 @@ h2, h3{
 }
 
 .template-select {
-  margin: 10px 0;
+  margin: 10px 0 0 10px;
   padding: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid #828282;
   border-radius: 5px;
   width: 100%;
   max-width: 300px;
+}
+
+.btn-add:hover{
+  background: #d3a524;
 }
