--- a/Frontend/my-registration-app/src/components/templates/ResumeTemplate2.css
+++ b/Frontend/my-registration-app/src/components/templates/ResumeTemplate2.css
@@ -1,63 +1,52 @@
   /* Основной контейнер */
-  .resume-container {
+  .resume-container2 {
     font-family: Arial, sans-serif;
     margin: 0 auto;
     padding: 0;
-    max-width: 800px;
+    max-width: 700px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #fbfaf5;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   }
 
-  .upper-line{
-    width: 100%;
-    height: 20px;
-    position: relative;
-    top: 0;
-    background-color: #a6cbcc;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-  }
-
   /* Шапка резюме */
-  .resume-header {
+  .resume-header2 {
     text-align: center;
     margin: 0 20px;
   }
   
-  .resume-name {
+  .resume-name2 {
     font-size: 40px;
     font-weight: bold;
     color: #333;
     margin-bottom: 10px;
   }
   
-  .resume-age-gender {
+  .resume-age-gender2 {
     font-size: 16px;
     color: #666;
   }
   
   /* Содержимое резюме */
-  .resume-content {
+  .resume-content2 {
     padding: 5px 20px 10px;
   }
   
-  .resume-section1 {
+  .resume-section2 {
     margin-bottom: 20px;
   }
   
-  .resume-section1 h3 {
+  .resume-section2 h3 {
     font-size: 18px;
     color: #333;
-    margin-bottom: 8px;
+    padding: 5px 0;
     text-transform: uppercase;
     /* Для выделения заголовков */
-    border-bottom: 3px solid #a6cbcc;
-    padding-bottom: 5px;
+    background-color: #f9f0cd;
   }
   
-  .resume-section1 p {
+  .resume-section2 p {
     font-size: 16px;
     color: #555;
     line-height: 1.5;
@@ -65,19 +54,19 @@
   
   /* Адаптивность */
   @media (max-width: 600px) {
-    .resume-container {
+    .resume-container2 {
       padding: 10px;
     }
   
-    .resume-name {
+    .resume-name2 {
       font-size: 20px;
     }
   
-    .resume-section1 h3 {
+    .resume-section2 h3 {
       font-size: 16px;
     }
   
-    .resume-section1 p {
+    .resume-section2 p {
       font-size: 14px;
     }
   }
