--- a/Frontend/my-registration-app/src/components/templates/ResumeTemplate3.css
+++ b/Frontend/my-registration-app/src/components/templates/ResumeTemplate3.css
@@ -1,16 +1,16 @@
 /* Основной контейнер */
-.resume-container {
+.resume-container3 {
     font-family: Arial, sans-serif;
     margin: 0 auto;
     padding: 20px;
-    max-width: 900px;
+    max-width: 700px;
     background-color: #fff;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     border: 1px solid #ccc;
   }
   
   /* Header */
-  .resume-header {
+  .resume-header3 {
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -18,49 +18,51 @@
     margin-bottom: 20px;
   }
   
-  .resume-header h1 {
+  .resume-header3 h1 {
     font-size: 28px;
     margin: 0;
   }
   
-  .resume-header h2 {
+  .resume-header3 h2 {
     font-size: 18px;
     margin: 5px 0 0;
   }
   
   /* Content */
-  .resume-content {
+  .resume-content3 {
     display: flex;
     gap: 20px;
   }
   
   /* Левая колонка */
-  .resume-left,
-  .resume-right {
+  .resume-left3,
+  .resume-right3 {
     flex: 1;
   }
   
-  .resume-section {
+  .resume-section3 {
     margin-bottom: 20px;
   }
   
-  .resume-section h3 {
-    font-size: 16px;
+  .resume-section3 h3 {
+    font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
     border-bottom: 2px solid #333;
     padding-bottom: 5px;
+    color: #333;
   }
   
-  .resume-section p {
-    font-size: 14px;
+  .resume-section3 p{
+    font-size: 16px;
     line-height: 1.6;
     color: #555;
+    margin: 0;
   }
   
   /* Общий стиль для адаптивности */
   @media (max-width: 768px) {
-    .resume-content {
+    .resume-content3 {
       flex-direction: column;
     }
   }
