--- a/Frontend/my-registration-app/src/components/Style/ResumeStyle.css
+++ b/Frontend/my-registration-app/src/components/Style/ResumeStyle.css
@@ -1,26 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
 
-.profilePanel, .btn-box {
-  display: flex;
-  justify-content: center;
-  padding: 15px 20px 0;
-}
-
-.navbar-profile {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.username {
-  color: #eee;
-}
-
-.wrapper {
-  margin: 10px auto;
-}
-
-.profile-container, .resume-container, .resume-form {
+.resume-form {
   width: 600px;
   margin: 50px auto;
   background-color: #2c2f34;
@@ -29,50 +9,53 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-h2, h3, .title {
+.resume-form .form-group{
+  margin-bottom: 20px;
+}
+
+.resume-form h2, .title {
   color: #eee;
   text-align: center;
   margin: 20px 0px;
 }
 
-.icon-edit {
-  height: 24px;
-}
-
-.infoFields {
-  margin: 0;
-}
-
-.infoFields p, label {
+.resume-form label {
   color: #989898;
   margin-top: 30px;
 }
 
-.infoFields input, .form-group input, textarea, select {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #828282;
-  background-color: #444446;
-  border-radius: 4px;
-  font-size: 16px;
-  margin-bottom: 20px;
-}
-
-textarea {
-  resize: vertical;
-}
-
-.form-group input:focus, textarea:focus, select:focus {
-  background-color: #565659;
-}
-
-.buttons-container, .btn-box {
+.templates-container{
   display: flex;
-  gap: 20px;
   justify-content: center;
+  gap: 30px;
+  margin-top: 10px;
 }
 
-.btn-save, .btn-cancel, .submit-button {
+.templates-container .btn-template{
+  color: #daa35b;
+}
+
+.resume-form input, textarea, select {
+  width: 100%;
+  padding: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  border: 1px solid #828282;
+  background-color: #565659;
+  border-radius: 4px;
+  color: #e6b333;
+}
+
+.resume-form input:focus, textarea:focus, select:focus {
+  background-color: #444446;
+  outline: none;
+}
+
+.btn-save-resume {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 45%;
   height: 40px;
   border-radius: 5px;
@@ -82,76 +65,19 @@ textarea {
   text-align: center;
   font-size: 0.9em;
   cursor: pointer;
+  margin: 0 auto;
 }
 
-.btn-cancel {
-  background: #7b7667;
-}
 
-.btn-logout {
-  width: 100%;
-  height: 30px;
-  border-radius: 5px;
-  background: none;
-  border: none;
-  color: rgb(237, 46, 46);
-  text-align: center;
-  font-size: 0.9em;
-  cursor: pointer;
-}
-
-.btn-logout:hover {
-  color: rgb(217, 132, 132);
-}
-
-.btn-save:hover, .submit-button:hover {
+.btn-save-resume:hover {
   background: #d3a524;
 }
 
-.btn-cancel:hover {
-  background: #a8a291;
-}
-
-.create-resume {
+/* .create-resume {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
+} */
 
-.text {
-  color: #aba0a0;
-}
 
-.btn-add {
-  width: auto;
-  padding: 0 20px;
-  height: 40px;
-  border-radius: 5px;
-  background: #e6b333;
-  border: none;
-  color: white;
-  text-align: center;
-  font-size: 0.9em;
-  cursor: pointer;
-}
 
-.form-group input, 
-textarea, 
-select {
-  color: #e6b333;
-  font-family: 'Roboto', sans-serif; /* Указание подключенного шрифта */
-  font-size: 14px;
-  line-height: 1.5;
-  padding: 10px;
-  border: 1px solid #828282;
-  background-color: #565659;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-.form-group input:focus, 
-textarea:focus, 
-select:focus {
-  background-color: #444446;
-  outline: none;
-}
