--- a/Frontend/my-registration-app/src/components/Style/Profile.css
+++ b/Frontend/my-registration-app/src/components/Style/Profile.css
@@ -47,7 +47,7 @@
   margin-top: 30px;
 }
 
-.infoFields input {
+.infoFields input, select {
   width: 100%;
   padding: 12px;
   border: 1px solid #828282;
@@ -69,7 +69,7 @@
   cursor: pointer;
 }
 
-.buttons-container{
+.buttons-box{
   display: flex;
   gap: 20px;
   justify-content: center;
@@ -102,14 +102,47 @@
   background: #a8a291;
 }
 
+.resume-list {
+  font-size: 18px;
+}
+
+.resume-item{
+  color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.resume-item .btn-edit, .btn-view{
+  height: 30px;
+  margin-left: 20px;
+  background-color: #f1d58a;
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+  padding: 0 10px;
+}
+
+.resume-item .btn-edit{
+  background-color: #f2dc9f;
+  color: #464544;
+}
+
+.resume-item .btn-view{
+  background-color: #a28840;
+}
+
 .create-resume{
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.text{
-  color: #aba0a0;
+
+.create-resume p{
+  color: #cdcdcd;
 }
+
 .btn-add{
   width: auto;
   padding: 0 20px;
@@ -119,18 +152,10 @@
   border: none;
   color: white;
   text-align: center;
-  font-size: 0.9em;
+  font-size: 15px;
   cursor: pointer;
 }
 
-.template-select {
-  margin: 10px 0 0 10px;
-  padding: 8px;
-  border: 1px solid #828282;
-  border-radius: 5px;
-  width: 100%;
-  max-width: 300px;
-}
 
 .btn-add:hover{
   background: #d3a524;
