--- a/Frontend/my-registration-app/src/components/Style/ResumeStyle.css
+++ b/Frontend/my-registration-app/src/components/Style/ResumeStyle.css
@@ -33,6 +33,8 @@
 
 .templates-container .btn-template{
   color: #daa35b;
+  background-color: #2c2f34;
+  border: none;
 }
 
 .resume-form input, textarea, select {
