--- a/Frontend/my-registration-app/src/components/templates/ResumeTemplate1.css
+++ b/Frontend/my-registration-app/src/components/templates/ResumeTemplate1.css
@@ -83,20 +83,20 @@
       font-size: 14px;
     }
   }
+
 /* Контейнер для кнопок внизу */
 .buttons-container {
   display: flex;
   justify-content: space-between;
-  position: fixed;
-  bottom: 20px;
-  left: 20px;   
-  right: 20px;   
-  width: calc(100% - 40px);
+  position: relative;
+  bottom: -60px;
+  left: 100px;    
+  width: calc(100% - 200px);
 }
 
 /* Стили для кнопки "Назад" */
 .btn-back {
-  background-color: #ff4d4d;
+  background-color: #766f6f;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
