--- a/Frontend/my-registration-app/src/components/Style/Main.css
+++ b/Frontend/my-registration-app/src/components/Style/Main.css
@@ -17,6 +17,10 @@ body {
   font-size: 2rem; /* Увеличиваем размер заголовка для лучшего восприятия */
 }
 
+.text{
+  margin: 40px 0 0;
+}
+
 .tmp-container {
  margin-top: 35px;
 }
